1)添加歌词 2）播放音乐

--- a/song.html
+++ b/song.html
@@ -10,6 +10,13 @@
 <body>
     <div class="page">
         <div class="disc-container">
+            <svg>
+                <use xlink:href="#icon-play"></use>
+            </svg>
+            <svg>
+                <use xlink:href="#icon-artboard25copy"></use>
+            </svg>
+           
             <img class="pointer" src="./img/needle-ip6.png" alt="">
             <div class="disc">
                 <!-- <div class="circle"> -->
@@ -19,24 +26,21 @@
                 <!-- </div> -->
             </div>
             <div class="song-description">
-                <h1>标题</h1>
-                <p>歌词1</p>
-                <p>歌词2</p>
-                <p>歌词3</p>
-                <p>歌词4</p>
-                <p>歌词5</p>
-                <p>歌词6</p>
-                <p>歌词7</p>
-                <p>歌词8</p>
-                <p>歌词9</p>
-                <p>歌词10</p>
+                <h1>远走高飞-金志文</h1>
+              <div class="lyric">
+                  <div class="lines">
+
+                  </div>
+              </div>
             </div>
             <div class="links">
                 <a href="#">打开</a>
-                <a href="#">下载</a>
+                <a class="main" href="#">下载</a>
             </div>
         </div>
     </div>
-    
+    <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/song.js"></script>
+    <script type="text/javascript" src="https://at.alicdn.com/t/font_402216_wbdyybpvoo9r7ldi.js"></script>
 </body>
 </html>
